src/main/java/com/sefford/kor/samples/core/business/errors/GetPhoneContactsError.java
package com.sefford.kor.samples.core.business.errors;

/**
 * Created by sefford on 28/08/14.
 */
public class GetPhoneContactsError extends InteractorError {

    public GetPhoneContactsError(Exception exception) {

    }
}
